--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/_HeroSectionCarousel.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/_HeroSectionCarousel.cshtml
@@ -1,4 +1,4 @@
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
             aria-current="true" aria-label="Slide 1"></button>
@@ -8,42 +8,42 @@
             aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner h-100">
-        <div class="carousel-item active">
+        <div class="carousel-item h-100 active" data-bs-interval="2000">
             <div class="carousel-overlay"></div>
             <img src="~/image/Grow-Trees-On-the-path-to-environment-sustainability-login.png" alt="carousel image"
                 class="w-100 h-100">
             <div class="carousel-caption">
                 <h5 class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur elit. Est, ut!</h5>
                 <p class="d-none d-lg-block">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi
-                    obcaecati fugiat tempore omnis hic quam impedit sequi molestiae ut cum id fugit ducimus quas
-                    rerum architecto eos autem eum soluta, temporibus numquam aspernatur reiciendis officiis
-                    doloremque cumque. Quisquam dolores architecto atque inventore provident! Facilis ullam dolor
-                    libero, magnam itaque laboriosam?</p>
+                    obcaecati fugiat tempore omnis hic quam impedit sequi molestiae ut cum id fugit ducimus quas rerum
+                    architecto eos autem eum soluta, temporibus numquam aspernatur reiciendis officiis doloremque
+                    cumque. Quisquam dolores architecto atque inventore provident! Facilis ullam dolor libero, magnam
+                    itaque laboriosam?</p>
             </div>
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item h-100">
             <div class="carousel-overlay"></div>
             <img src="~/image/Animal-welfare-&-save-birds-campaign.png" alt="carousel image" class="w-100 h-100">
             <div class="carousel-caption">
                 <h5 class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur elit. Est, ut!</h5>
                 <p class="d-none d-lg-block">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi
-                    obcaecati fugiat tempore omnis hic quam impedit sequi molestiae ut cum id fugit ducimus quas
-                    rerum architecto eos autem eum soluta, temporibus numquam aspernatur reiciendis officiis
-                    doloremque cumque. Quisquam dolores architecto atque inventore provident! Facilis ullam dolor
-                    libero, magnam itaque laboriosam?</p>
+                    obcaecati fugiat tempore omnis hic quam impedit sequi molestiae ut cum id fugit ducimus quas rerum
+                    architecto eos autem eum soluta, temporibus numquam aspernatur reiciendis officiis doloremque
+                    cumque. Quisquam dolores architecto atque inventore provident! Facilis ullam dolor libero, magnam
+                    itaque laboriosam?</p>
             </div>
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item h-100">
             <div class="carousel-overlay"></div>
             <img src="~/image/Grow-Trees-On-the-path-to-environment-sustainability-login.png" alt="carousel image"
                 class="w-100 h-100">
             <div class="carousel-caption">
                 <h5 class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur elit. Est, ut!</h5>
                 <p class="d-none d-lg-block">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi
-                    obcaecati fugiat tempore omnis hic quam impedit sequi molestiae ut cum id fugit ducimus quas
-                    rerum architecto eos autem eum soluta, temporibus numquam aspernatur reiciendis officiis
-                    doloremque cumque. Quisquam dolores architecto atque inventore provident! Facilis ullam dolor
-                    libero, magnam itaque laboriosam?</p>
+                    obcaecati fugiat tempore omnis hic quam impedit sequi molestiae ut cum id fugit ducimus quas rerum
+                    architecto eos autem eum soluta, temporibus numquam aspernatur reiciendis officiis doloremque
+                    cumque. Quisquam dolores architecto atque inventore provident! Facilis ullam dolor libero, magnam
+                    itaque laboriosam?</p>
             </div>
         </div>
     </div>
