--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Home/Index.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Home/Index.cshtml
@@ -3,43 +3,7 @@
 }
 <div class="index-body d-grid min-vh-100">
         <header class="border-bottom border-2 bg-white">
-            <nav class="navbar sticky-top bg-white py-1 border-2 border-bottom">
-                <div class="container">
-                    <div class="d-flex gap-5 align-items-center fw-light">
-                        <a href="#">
-                            <img src="~/images/static/logo.png" alt="logo" class="navbar-brand">
-                        </a>
-                        <a href="#" class="color-darkgray">Stories</a>
-                        <div class="dropdown d-none d-md-block">
-                            <button class="btn color-darkgray dropdown-toggle fw-light" type="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Policy
-                                <img src="~/images/static/drop-down.png" alt="drop-down" class="d-inline ms-2">
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="dropdown">
-                            <button class="btn dropdown-toggle d-flex align-items-center gap-2 color-darkgray fw-light"
-                                type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <img src="~/images/static/user-img.png" alt="profile" class="rounded-circle profile-picture">
-                                <span class="d-none d-md-inline">Evan Donohue</span>
-                                <img src="~/images/static/drop-down.png" alt="drop-down">
-                            </button>
-                            <ul class="dropdown-menu dropdown-menu-end dropdown-menu-md-start">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </nav>
+            <partial name="_Navbar"></partial>
             <section class="container d-flex flex-column flex-md-row justify-content-md-between">
                 <div class="d-flex justify-content-between index-header-section bg-white py-2">
                     <div class="d-flex">
@@ -1804,13 +1768,8 @@
                 <button class="btn rounded border border-2"><img src="~/images/static/right-arrow1.png" alt="right"></button>
                 <button class="btn rounded border border-2"><img src="~/images/static/next.png" alt="next"></button>
             </div>
-
         </main>
-        <footer class="border-top">
-            <div class="container py-4 fw-light">
-                <a href="#" class="color-darkgray">Privacy Policy</a>
-            </div>
-        </footer>
+        <partial name="_Footer"></partial>
     </div>
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script>
