--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/ForgotPassword.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/ForgotPassword.cshtml
@@ -7,10 +7,11 @@
         <div class="color-darkgray forgot-password-title">Forgot Password</div>
         <div class="color-darkgray fw-light text-14 forgot-password-description text-center">Enter your email address
             you've using for your account below and we will send you a password reset link</div>
-        <form class="d-grid gap-4 mt-2">
+        <form method="post" asp-action="ForgotPasswordPost" class="d-grid gap-4 mt-2" id="ForgotPasswordForm">
             <div>
-                <label for="email" class="fw-light">Email Address</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter your email address...">
+                <label for="Email" class="fw-light">Email Address</label>
+                <input type="email" class="form-control" id="Email" placeholder="Enter your email address...">
+                <span id="EmailError"></span>
             </div>
             <button type="submit" class="btn button w-100 bg-white">Reset my Password</button>
         </form>
