--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Shared/_Navbar.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Shared/_Navbar.cshtml
@@ -1,3 +1,6 @@
+@using Microsoft.AspNetCore.Http;
+@inject IHttpContextAccessor HttpContextAccessor
+
 <nav class="navbar sticky-top bg-white py-1 border-2 border-bottom">
     <div class="container">
         <div class="d-flex gap-5 align-items-center fw-light">
@@ -19,19 +22,23 @@
             </div>
         </div>
         <div>
-            <div class="dropdown">
-                <button class="btn dropdown-toggle d-flex align-items-center gap-2 color-darkgray fw-light"
+            @if(@HttpContextAccessor.HttpContext.Session.GetString("Email") != null){
+                <div class="dropdown">
+                    <button class="btn dropdown-toggle d-flex align-items-center gap-2 color-darkgray fw-light"
                     type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <img src="~/images/static/user-img.png" alt="profile" class="rounded-circle" width="40px" height="40px">
-                    <span class="d-none d-md-inline">Evan Donohue</span>
+                    <span class="d-none d-md-inline">@HttpContextAccessor.HttpContext.Session.GetString("FirstName")</span>
                     <img src="~/images/static/drop-down.png" alt="drop-down">
-                </button>
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-md-start">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-            </div>
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-end dropdown-menu-md-start">
+                        <li><a class="dropdown-item" href="#">My Profile</a></li>
+                        <li><a class="dropdown-item" href="#">Volunteer TimeSheet</a></li>
+                        <li><a asp-controller="User" asp-action="Logout" class="dropdown-item">Logout</a></li>
+                    </ul>
+                </div>
+            }else{
+                <a asp-controller="User" asp-action="Login" class="btn button bg-white">Login</a>
+            }
         </div>
     </div>
 </nav>
