--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/Registration.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/Registration.cshtml
@@ -7,7 +7,7 @@
     <partial name="_HeroSectionCarousel"></partial>
     <section
         class="right-section d-flex flex-column gap-3 gap-lg-1 gap-xxl-3 justify-content-center align-items-center p-5 p-lg-0 mb-lg-4">
-        <form method="post" asp-action="Registration" class="d-grid gap-3 gap-lg-1 gap-xxl-3" id="RegistrationForm">
+        <form method="post" asp-route="RegistrationPost" class="d-grid gap-3 gap-lg-1 gap-xxl-3" id="RegistrationForm">
             <div>
                 <label asp-for="FirstName" class="fw-light"></label>
                 <input type="text" asp-for="FirstName" class="form-control" placeholder="Enter your first name">
