--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/ForgotPassword.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/ForgotPassword.cshtml
@@ -7,11 +7,11 @@
         <div class="color-darkgray forgot-password-title">Forgot Password</div>
         <div class="color-darkgray fw-light text-14 forgot-password-description text-center">Enter your email address
             you've using for your account below and we will send you a password reset link</div>
-        <form method="post" asp-action="ForgotPasswordPost" class="d-grid gap-4 mt-2" id="ForgotPasswordForm">
+        <form method="post" asp-route="ForgotPasswordPost" class="d-grid gap-4 mt-2" id="ForgotPasswordForm">
             <div>
                 <label for="Email" class="fw-light">Email Address</label>
-                <input type="email" class="form-control" id="Email" placeholder="Enter your email address...">
-                <span id="EmailError"></span>
+                <input type="email" class="form-control" name="Email" id="Email" placeholder="Enter your email address...">
+                <span id="EmailError" class="text-danger text-14"></span>
             </div>
             <button type="submit" class="btn button w-100 bg-white">Reset my Password</button>
         </form>
@@ -19,3 +19,30 @@
         <a href="#" class="fw-light color-darkgray privacy-policy text-14">Privacy Policy</a>
     </section>
 </main>
+
+<script>
+    const Email = document.querySelector("#Email");
+    const ForgotPasswordForm = document.querySelector("#ForgotPasswordForm");
+    const EmailError = document.querySelector("#EmailError");
+    let regex = /^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]{2,4})+$/
+    Email.addEventListener('input', () => {
+        if(regex.test(Email.value) == false){
+            EmailError.textContent = "Invalid Email input."
+        }
+        else
+            EmailError.textContent = '';
+    })
+    ForgotPasswordForm.addEventListener('submit', (e)=>{
+        e.preventDefault();
+        if(Email.value == null || Email.value == ''){
+            EmailError.textContent = "The Email filed is required.";
+            return false;
+        };
+        if(regex.test(Email.value) == false){
+            EmailError.textContent = "Invalid Email input."
+            return false;
+        }
+        ForgotPasswordForm.submit();
+    }
+    )
+</script>
