--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/ResetPassword.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/ResetPassword.cshtml
@@ -1,3 +1,4 @@
+@model ResetPasswordDataVM
 @{
     ViewData["Title"] = "Reset Password";
 }
@@ -7,18 +8,54 @@
         <div class="color-darkgray forgot-password-title">New Password</div>
         <div class="color-darkgray fw-light text-14 forgot-password-description text-center">Please enter a new
             password in the fields below.</div>
-        <form class="d-grid gap-4 mt-2">
+        <form class="d-grid gap-4 mt-2" method="post" id="ResetForm" asp-route="ResetPasswordPost">
             <div>
-                <label for="password" class="fw-light">New Password</label>
-                <input type="password" class="form-control" id="password" value="123asdff">
+                <label asp-for="Password" class="fw-light"></label>
+                <input type="password" class="form-control" asp-for="Password" id="Password">
+                <span asp-validation-for="Password" class="text-danger text-14"></span>
             </div>
             <div>
-                <label for="confirm-password" class="fw-light">Confirm New Password</label>
-                <input type="password" class="form-control" id="confirm-password" value="1234asdf">
+                <label asp-for="ConfirmPassword" class="fw-light"></label>
+                <input type="password" asp-for="ConfirmPassword" class="form-control" id="ConfirmPassword">
+                <span asp-validation-for="ConfirmPassword" id="ConfirmPasswordError" class="text-danger text-14"></span>
             </div>
+            <input asp-for="Email" hidden>
+            <input asp-for="Token" hidden>
             <button type="submit" class="btn button w-100 bg-white">Change Password</button>
         </form>
         <a asp-controller="User" asp-action="Login" class="fw-light text-14 color-darkgray">Login</a>
         <a href="#" class="fw-light color-darkgray privacy-policy text-14">Privacy Policy</a>
     </section>
 </main>
+@section Scripts{
+    <partial name="_ValidationScriptsPartial.cshtml"></partial>
+}
+<script>
+    const ConfirmPassword = document.querySelector("#ConfirmPassword");
+    const Password = document.querySelector("#Password");
+    const ResetForm = document.querySelector("#ResetForm");
+    
+    const ConfirmPasswordError = document.querySelector("#ConfirmPasswordError");
+
+    ConfirmPassword.addEventListener('input', ()=>{
+        if(Password.value != ConfirmPassword.value)
+            ConfirmPasswordError.textContent = "Confirm password must be same as password."
+        else
+            ConfirmPasswordError.textContent = '';
+    })
+    
+    ResetForm.addEventListener('submit', (e)=>{
+        e.preventDefault();
+        if(ConfirmPassword.value == null || ConfirmPassword.value == ""){
+            return;
+        }
+        if(Password.value == null || Password.value == ""){
+            return;
+        }
+        if(ConfirmPassword.value != Password.value){
+            ConfirmPasswordError.textContent = "Confirm password must be same as password."
+            return;
+        }
+        ResetForm.submit();
+    })
+</script>
