--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/ForgotPassword.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/ForgotPassword.cshtml
@@ -5,13 +5,15 @@
     <partial name="_HeroSectionCarousel"></partial>
     <section class="right-section d-flex flex-column gap-3 justify-content-center align-items-center p-5 p-lg-5">
         <div class="color-darkgray forgot-password-title">Forgot Password</div>
-        <div class="color-darkgray fw-light text-14 forgot-password-description text-center">Enter your email address
+        <div class="color-darkgray fw-light text-14 text-center">Enter your email address
             you've using for your account below and we will send you a password reset link</div>
         <form method="post" asp-route="ForgotPasswordPost" class="d-grid gap-4 mt-2" id="ForgotPasswordForm">
             <div>
                 <label for="Email" class="fw-light">Email Address</label>
-                <input type="email" class="form-control" name="Email" id="Email" placeholder="Enter your email address...">
+                <input type="email" class="form-control" name="email" id="Email" placeholder="Enter your email address...">
                 <span id="EmailError" class="text-danger text-14"></span>
+                <span class="invalid-email text-danger text-14">@TempData["Error"]</span>
+                <span class="text-success text-14">@TempData["Success"]</span>
             </div>
             <button type="submit" class="btn button w-100 bg-white">Reset my Password</button>
         </form>
@@ -23,9 +25,11 @@
 <script>
     const Email = document.querySelector("#Email");
     const ForgotPasswordForm = document.querySelector("#ForgotPasswordForm");
+    const invalidEmail = document.querySelector(".invalid-email");
     const EmailError = document.querySelector("#EmailError");
     let regex = /^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]{2,4})+$/
     Email.addEventListener('input', () => {
+        invalidEmail.textContent = '';
         if(regex.test(Email.value) == false){
             EmailError.textContent = "Invalid Email input."
         }
