--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/ResetPassword.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/ResetPassword.cshtml
@@ -17,7 +17,8 @@
             <div>
                 <label asp-for="ConfirmPassword" class="fw-light"></label>
                 <input type="password" asp-for="ConfirmPassword" class="form-control" id="ConfirmPassword">
-                <span asp-validation-for="ConfirmPassword" id="ConfirmPasswordError" class="text-danger text-14"></span>
+                <span asp-validation-for="ConfirmPassword" class="text-danger text-14"></span>
+                <span id="ConfirmPasswordError" class="text-danger text-14"></span>
             </div>
             <input asp-for="Email" hidden>
             <input asp-for="Token" hidden>
@@ -46,12 +47,10 @@
     
     ResetForm.addEventListener('submit', (e)=>{
         e.preventDefault();
-        if(ConfirmPassword.value == null || ConfirmPassword.value == ""){
+        if(ConfirmPassword.value == null || ConfirmPassword.value == "")
             return;
-        }
-        if(Password.value == null || Password.value == ""){
+        if(Password.value == null || Password.value == "")
             return;
-        }
         if(ConfirmPassword.value != Password.value){
             ConfirmPasswordError.textContent = "Confirm password must be same as password."
             return;
