--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/_HeroSectionCarousel.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/_HeroSectionCarousel.cshtml
@@ -11,7 +11,7 @@
         <div class="carousel-item h-100 active" data-bs-interval="2000">
             <div class="carousel-overlay"></div>
             <img src="~/images/static/Grow-Trees-On-the-path-to-environment-sustainability-login.png" alt="carousel image"
-                class="w-100 h-100">
+                class="w-100 h-100 object-fit-cover">
             <div class="carousel-caption">
                 <h5 class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur elit. Est, ut!</h5>
                 <p class="d-none d-lg-block">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi
@@ -23,7 +23,7 @@
         </div>
         <div class="carousel-item h-100">
             <div class="carousel-overlay"></div>
-            <img src="~/images/static/Animal-welfare-&-save-birds-campaign.png" alt="carousel image" class="w-100 h-100">
+            <img src="~/images/static/Animal-welfare-&-save-birds-campaign.png" alt="carousel image" class="w-100 h-100 object-fit-cover">
             <div class="carousel-caption">
                 <h5 class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur elit. Est, ut!</h5>
                 <p class="d-none d-lg-block">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi
@@ -36,7 +36,7 @@
         <div class="carousel-item h-100">
             <div class="carousel-overlay"></div>
             <img src="~/images/static/Grow-Trees-On-the-path-to-environment-sustainability-login.png" alt="carousel image"
-                class="w-100 h-100">
+                class="w-100 h-100 object-fit-cover">
             <div class="carousel-caption">
                 <h5 class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur elit. Est, ut!</h5>
                 <p class="d-none d-lg-block">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi
