--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/Login.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/Login.cshtml
@@ -16,8 +16,9 @@
                 <label asp-for="Password" class="fw-light"></label>
                 <input type="password" asp-for="Password" class="form-control">
                 <span asp-validation-for="Password" class="text-14 text-danger"></span>
+                <span class="text-success text-14">@TempData["Success"]</span>
+                <span class="text-danger text-14">@TempData["Error"]</span>
             </div>
-            <span class="text-success text-14">@TempData["PasswordSuccess"]</span>
             <button type="submit" class="btn button w-100 bg-white">Login</button>
         </form>
         <a asp-controller="User" asp-action="ForgotPassword" class="fw-light color-darkgray text-14">Lost your
