--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Home/_IndexMissions.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Home/_IndexMissions.cshtml
@@ -1,7 +1,7 @@
 @model IndexMissionVM
 <section class="index-grid-view row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
     @foreach(MissionVM mission in Model.missionVM){
-    <div class="col">
+    <div class="col -z-index-1">
         <div class="card shadow-sm h-100">
             <div class="position-relative card-top">
                 <a href="#">
