--- a/MVC/CI-Platform/CI-PlatformWeb/wwwroot/css/style.css
+++ b/MVC/CI-Platform/CI-PlatformWeb/wwwroot/css/style.css
@@ -82,7 +82,9 @@ form input {
 .mt-n1 {
   margin-top: -1rem;
 }
-
+.-z-index-1{
+  z-index: -1;
+}
 .-translate-middle-y {
   transform: translateY(50%);
 }
@@ -268,19 +270,19 @@ form input:focus {
 .index-wishlist {
   bottom: 50px;
   right: 15px;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .index-invite {
   bottom: 10px;
   right: 15px;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .index-city {
   right: 15px;
   top: 15px;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 @media (max-width: 767px) {
